<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:bbn_itemColorActive="@android:color/black"
    app:bbn_itemColorDisabled="#33000000"
    app:bbn_itemColorInactive="#AA000000"
    app:bbn_rippleColor="#66000000">

    <item
        android:id="@+id/bbn_item1"
        android:icon="@drawable/ic_cloud_off_white_24dp"
        android:title="Cloud Sync" />
    <item
        android:id="@+id/bbn_item2"
        android:icon="@drawable/ic_cast_connected_white_24dp"
        android:title="Chromecast" />
    <item
        android:id="@+id/bbn_item3"
        android:icon="@drawable/ic_mail_white_24dp"
        android:title="Mail" />

</menu>